--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "name": "𝔻𝔸ℝ𝕂 ℂ𝕆𝔹ℝ𝔸",
+  "name": "HunterXUserBot",
   "description": "The best and most awaited userbot made by hellboi_atul and modified by Jarvis userbot's owner(@Sppidy) Made with ❤ For Support Join @Dark_cobra_support ",
   "logo": "https://telegra.ph/file/00f47c54ceda3944dc47c.jpg ",
     "keywords": [
@@ -9,9 +9,9 @@
     "modular",
     "productivity"
   ],
-  "repository": "https://github.com/DARK-COBRA/DARKCOBRA/",
-  "website": "https://github.com/DARK-COBRA/DARKCOBRA/",
-  "success_url": "https://t.me/Dark_cobra_support",
+  "repository": "https://github.com/BROTHERHOODOP/HunterXUserBot",
+  "website": "https://github.com/BROTHERHOODOP/HunterXUserBot",
+  "success_url": "https://t.me/HunterXUserBot_support",
   "stack": "container",
   "env": {
     "ENV": {
