--- a/app.json
+++ b/app.json
@@ -4,7 +4,8 @@
   "logo": "https://te.legra.ph/file/08689c9e4c9ec0d8c6cdb.jpg ",
     "keywords": [
     "telegram",
-    "userbot",
+    "hunterx",
+    "Jay",
     "plugin",
     "modular",
     "productivity"
