--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "name": "HunterXUserBot",
+  "name": "🥀HUNTERXUSERBOT⚡ ",
   "description": "The best and most powerful full userbot made by owner(@KSHITIJ_RAJ) Made with ❤ For Support Join @HunterXUserBot_support ",
   "logo": "https://te.legra.ph/file/08689c9e4c9ec0d8c6cdb.jpg ",
     "keywords": [
